tests/test_files/invalid_files_sintatic/unclosed_brace.c
int main() {
    int x = 5;
    return 0;
// ❌ brace “}” não está aqui
